src/test/ui/match/issue-70972-dyn-trait.stderr
error: `&dyn std::marker::Send` must implement `PartialEq` to be used in a pattern
  --> $DIR/issue-70972-dyn-trait.rs:6:9
   |
LL |         F => panic!(),
   |         ^

error: aborting due to previous error

